fix alignment

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1571,6 +1571,7 @@ ul.online-users li span.online-dot{
 }
 
 .timeline-cover .timeline-nav-bar .profile-info{
+  width: 96%;
   position: absolute;
   text-align: center;
   padding: 0 20px;
